fixed input alignments and different breakpoints

--- a/src/components/LogIn/LogIn.css
+++ b/src/components/LogIn/LogIn.css
@@ -42,6 +42,12 @@ form {
   color: #008000;
 }
 
+@media (min-width: 500px) {
+  .Login {
+    max-width: 300px;
+  };
+}
+
 @media (min-width: 768px) {
   header {
     position: fixed;
@@ -95,5 +101,11 @@ form {
     display: block;
     margin: 0px;
     color: #008000;
+  }
+}
+
+@media (min-width: 900px) {
+  .Login {
+    max-width: 1000px;
   }
 }
